fix remaining capacity unit

--- a/nodejs-assets/nodejs-project/index.html
+++ b/nodejs-assets/nodejs-project/index.html
@@ -659,7 +659,7 @@
           'remaining-capacity',
           'Remaining Capacity',
           '',
-          info.remainingCapacityAh + 'A',
+          info.remainingCapacityAh + 'Ah',
         );
 
         createOrUpdateSection(
