--- a/nodejs-assets/nodejs-project/index.html
+++ b/nodejs-assets/nodejs-project/index.html
@@ -1015,7 +1015,7 @@
     };
 
     window.addEventListener('resize', () => {
-      myChart.resize();
+      myChart?.resize();
     });
   </script>
 </html>
